// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches enzyme snapshots matches snapshot 1`] = `
<Link__StyledLink
  href="https://test.com"
  onClick={[Function]}
  rel="noopener noreferrer"
  target="_blank"
/>
`;

exports[`matches test renderer snapshot serializes the styles 1`] = `
<a
  className="Link__StyledLink-sc-1k0sviq-0 ewXLHc"
  href="https://test.com"
  onClick={[Function]}
  rel="noopener noreferrer"
  target="_blank"
/>
`;
